test/libhyperion/syntaxTests/scoping/name_shadowing_function_parameters_parameter_vs_struct_enum.hyp
library C {
    enum EnumType {A, B, C}

    struct StructType {
        uint x;
    }

    function f1(function (StructType memory) external f) external {}
    function f2(function (EnumType) external f) external {}
    function f3(function (EnumType, StructType memory) external f) external {}
}
// ----
// TypeError 4888: (104-143): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
